# synfig

synfig-studio/: configure.ac
synfig-studio/plugins/: Makefile.am
synfig-studio/plugins/lottie-exporter/: Makefile.am  dumb_store.py  lottie-exporter.py  plugin.xml.in
synfig-studio/plugins/lottie-exporter/effects/: Makefile.am
synfig-studio/plugins/lottie-exporter/helpers/: Makefile.am
synfig-studio/plugins/lottie-exporter/layers/: Makefile.am
synfig-studio/plugins/lottie-exporter/properties/: Makefile.am
synfig-studio/plugins/lottie-exporter/properties/shapePropKeyframe/: Makefile.am  helper.py  outline.py  polygon.py  region.py
synfig-studio/plugins/lottie-exporter/shapes/: Makefile.am
synfig-studio/plugins/lottie-exporter/sources/: Makefile.am
synfig-studio/plugins/lottie-exporter/synfig/: Makefile.am
synfig-studio/plugins/tgs-exporter/: Makefile.am  plugin.xml.in  tgs-exporter.py
synfig-studio/plugins/tgs-exporter/properties/: Makefile.am
synfig-studio/plugins/tgs-exporter/properties/shapePropKeyframe/: Makefile.am  outline.py
synfig-studio/src/gui/docks/: dock_timetrack.cpp
