# Id $

PLUGIN_NAME = helpers

EXTRA_FILES = \
			  __init__.py \
			  transform.py \
			  bezier.py \
			  blendMode.py \
			  mask.py

plugindir = ${datadir}/synfig/plugins/lottie-exporter/$(PLUGIN_NAME)
plugin_DATA = \
				$(EXTRA_FILES)

EXTRA_DIST = \
			 $(EXTRA_FILES)

MAINTAINERCLEANFILES = Makefile.in
