# Id $

PLUGIN_NAME = shapes

EXTRA_FILES = \
			  __init__.py \
			  star.py \
			  circle.py \
			  rectangle.py \
			  fill.py

plugindir = ${datadir}/synfig/plugins/lottie-exporter/$(PLUGIN_NAME)
plugin_DATA = \
                $(EXTRA_FILES)

EXTRA_DIST = \
             $(EXTRA_FILES)

MAINTAINERCLEANFILES = Makefile.in

