# Id $

PLUGIN_NAME = properties/shapePropKeyframe

EXTRA_FILES = \
			  __init__.py \
			  helper.py \
			  outline.py \
			  polygon.py \
			  region.py

plugindir = ${datadir}/synfig/plugins/tgs-exporter/$(PLUGIN_NAME)
plugin_DATA = \
                $(EXTRA_FILES)

EXTRA_DIST = \
             $(EXTRA_FILES)

MAINTAINERCLEANFILES = Makefile.in
